# Tributary

./: .env.example  .gitignore  CLAUDE.md  DATASOURCE.md  HONESTY.md  Makefile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.claude/skills/audit/: SKILL.md
.claude/skills/iterate/: SKILL.md
Graph/: constraints.cypher  writer.py
Seed/: seed.py
common/: models.py
data/golden/: EXPECTED.md  accounts.json  attributions_stub.json  entities.json  fx_rates.json  ownership.json  presence_records.json  prior_losses.json  transactions.json
data/processed/: transactions.csv
data/raw/: get_data.py  lenovo_consolidated_united_states_LNVGY.csv  transactions_raw.csv
data/rules/: de.json  fr.json  hk.json  us.json
examples/: ai_layer_output.json  ai_layer_output1.json  build_input_hk.py  debug_qwen.py  ingest_rules_file.py  input_transaction.json  input_with_hk_rules.json  output_transaction.json  qwen_output.json  qwen_output_refactored.json  qwen_rag_hk_forced_output.json  qwen_rag_hk_output.json  qwen_rag_output.json  requirement.txt  rules.db  run_ai_layer.py  run_ai_layer.sh  seed_rules_db.py
examples/Datasets/: balance_sheet_tax_rules.json  hk_dipn21_rules.json  oecd_corporate_rates.json
examples/DocsRef/: OECD,DF_TABLE_II1,+all.csv
graph/: constraints.cypher  graph_snapshot.json  snapshot.py  writer.py
logs/: ai_layer_15988.err  ai_layer_15988.out
pipeline/: io.py  normalize_balance_sheet.py  normalize_oecd_data.py  normalizer.py
pitch/: 01_business_video.md  02_tech_demo_video.md  03_live_pitch.md  04_qa_prep.md
project-harness/: API_ENGINE_AI.md  API_ENGINE_GRAPH.md  CLAUDE.md  DECISIONS.md  DEMO_SCRIPT.md  FEATURES.md  HARNESS_GATES.md  ISSUES.md  NEXT_SESSION.md  PATTERNS.md  REVIEW.md  ROADMAP.md  SKILLS_QUEUE.md
project-harness/briefs/: W1.1-scaffold.md  W1.2-models.md  W1.4-golden-data.md  W1.5-expected-md.md  W1.6-neo4j-seed.md
scripts/: check_layers.py
seed/: seed.py
src/tributary/: __init__.py
static/: index.html
tests/: conftest.py
tests/integration/: test_ai_adapter_integration.py  test_engine_golden.py  test_seed.py
tests/support/: __init__.py  fakes.py
tests/unit/: test_aggregator_exemption.py  test_attribution_stub.py  test_claude_client.py  test_config_and_prompts.py  test_engine_units.py  test_flow_context.py  test_golden_data.py  test_group_relief.py  test_models.py  test_renderer.py  test_rules.py  test_scaffold.py  test_wht_engine.py  test_wht_exposure.py
(+83 files in other folders)
